it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

=== New installer in 1.17 ===
MediaWiki 1.17 is shipping with a completely redesigned installer to fix
a lot of outstanding bugs, cleanup the code quality, and make it easier to
use. Notably, you can now run upgrades from the web without having to move
LocalSettings.php. The specific bugs are listed below in the general notes.

=== New ResourceLoader in 1.17 ===
MediaWiki 1.17 ships with a ResourceLoader which combines and minifies css and 
javascript attached to the page. They are served from the new entry point load.php
If the page is served with the &debug=true parameter, the non-minified files 
are used instead.

=== Configuration changes in 1.17 ===
* DatabaseFunctions.php that was needed for compatibility with pre-1.3
  extensions has been removed.
* $wgLogAutocreatedAccounts controls whether autocreation of accounts is logged
  to new users log.
* $wgAllowImageTag can be set to true to whitelist the <img> tag in wikitext.
* (bug 12797) Add $wgGalleryOptions for adjusting of default gallery display
  options.
* $wgAllowUserCssPrefs option allows disabling CSS-based preferences; which can
  improve page loading speed.
* (bug 22858) $wgLocalStylePath is by default set to the same value as
  $wgStylePath but should never point to a different domain than the site is
  on, allowing skins to use .htc files which are not cross-domain friendly.
* (bug 20193) Added $wgVectorShowVariantName global configuration variable
  which causes Vector to render the variants drop-down menu with a label
  showing the current variant name. This is off by default, pending further
  research into its user experience implications.
* XmlFunctions.php has been removed. Use the Xml or Html classes as appropriate.
* Added $wgSQLMode for setting database SQL modes - either performance (null)
  or other reasons (such as enabling stricter checks)