@@ -1,0 +1,2 @@
+This is a back-compat directory for installer, which resides in mw-config/ now.
+It will probably be remved in 1.19.
