@@ -487,7 +487,7 @@ abstract class Installer {
 	 * On POSIX systems return the primary group of the webserver we're running under.
 	 * On other systems just returns null.
 	 *
-	 * This is used to advice the user that he should chgrp his config/data/images directory as the
+	 * This is used to advice the user that he should chgrp his mw-config/data/images directory as the
 	 * webserver user before he can install.
 	 *
 	 * Public because SqliteInstaller needs it, and doesn't subclass Installer.
@@ -838,7 +838,7 @@ abstract class Installer {
 			return false;
 		}
 
-		$uri = preg_replace( '{^(.*)/config.*$}', '$1', $path );
+		$uri = preg_replace( '{^(.*)/(mw-)?config.*$}', '$1', $path );
 		$this->setVar( 'wgScriptPath', $uri );
 	}
 
